--- a/new.html
+++ b/new.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Schülerverwaltung</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
@@ -21,7 +22,7 @@
             <input type="text" name="nachname" id="inputNachname">
         </fieldset>
 
-        <button>Speichern</button>
+        <button class="button">Speichern</button>
     </form>
 </body>
 </html>
